# incesref

./: .editorconfig  .env  docker-compose.prod.yml  docker-compose.yml  package-lock.json
backend/: .gitignore  Dockerfile  app.py  config.py  decorators.py  pyproject.toml  requirements.txt  start.sh
backend/src/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/src/controllers/: ambitocontroller.py  authcontroller.py  certificadocontroller.py  cfscontroller.py  cursoactivocontroller.py  cursocontroller.py  cursoscontenidocontroller.py  empleadorcontroller.py  entidadtrabajocontroller.py  geografiacontroller.py  personcontroller.py  preimpresocontroller.py  programacontroller.py  rolcontroller.py  tipoformacioncontroller.py  userscontroller.py
backend/src/helpers/: date_parser.py  filters.py  jwt.py  send_email.py
backend/src/models/: ambitosmodel.py  auditoriamodel.py  certificadomodel.py  cfsmodel.py  cursoactivomodel.py  cursomodel.py  cursoscontenidomodel.py  empleadormodel.py  entidadtrabajomodel.py  firmaempleadormodel.py  firmarectoresmodel.py  geografiamodel.py  personasmodel.py  preimpresomodel.py  programamodel.py  rolmodel.py  tipocontribuyentemodel.py  tipoformacionmodel.py  usuario_rol.model.py  usuariomodel.py  usuariorolmodel.py  vigenciacertificadosmodels.py  vw_curso_certificado.py  vw_curso_publicado.py
backend/src/services/: audit_services.py  roles_services.py
backend/src/views/: base.html
backend/static/: package-lock.json  package.json
backend/static/uploads/: curso_pro.csv  index.html
frontend/: .gitignore  (+5 more)
(+101 files in other folders)
